Changed some homepage images, and menu names.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
-  />
+  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
 
 
   <title>Sun Mihall</title>
 
   <!--     Fonts and icons     -->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-  />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-  />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -72,7 +69,7 @@
             <ul class="dropdown-menu">
               <li>
                 <a href="index.html">
-                  Home
+                  ホーム
                 </a>
               </li>
               <li>
@@ -121,13 +118,13 @@
 
           <li>
             <a href="lesson-course.html">
-              レッスンコース
+              レッスンスタイル
             </a>
           </li>
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              目的別の英会話レッスン
+              レッスンコース
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
@@ -250,8 +247,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
+          <h3 class="title">新しい素敵なホームページはもうすぐ！</h3>
           <h1 class="title">目標を達成できる<br>英会話スクール</h1>
-          <h4>今の勉強法やスクールで満足ですか？</h4>
+          <h3>今の勉強法やスクールで満足ですか？</h3>
           <br />
           <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
             <i class="fa fa-play"></i> Watch video
@@ -324,7 +322,7 @@
             レッスンを詳しく見てみる
           </a>
           <a href="tel:###-###-###" class="call-now-btn-box">
-            <img src="assets/img/call-banner-2.png" alt="" class="call-now-btn">
+            <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
           </a>
         </div>
         <!-- <div class="row text-center u-margin-top-small">
@@ -387,9 +385,9 @@
                   <i class="material-icons">stars</i>
                 </div>
                 <div class="description">
-                  <h4 class="info-title">10月新入会者限定！入会金割引キャンペーン</h4>
+                  <h4 class="info-title">11月新入会者限定！入会金割引キャンペーン</h4>
                   <p class="description">
-                    10月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！<br> （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
+                    11月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！<br> （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
                   </p>
                 </div>
               </div>
@@ -456,7 +454,8 @@
               </ul>
 
               <p class="text-gray">
-                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
+                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>
+                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
               </p>
               <a href="pricing.html" class="btn btn-primary margin-top-small">
                 レッスン・料金プランを詳しく見る
@@ -600,7 +599,7 @@
                 </div>
                 <div class="row text-center u-margin-top-small">
                   <a href="tel:###-###-###" class="call-now-btn-box">
-                    <img src="assets/img/call-banner-2.png" alt="" class="call-now-btn">
+                    <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
                   </a>
                 </div>
               </div>
@@ -656,7 +655,7 @@
                 <h6 class="category text-info">For new students</h6>
 
                 <h3 class="card-title">
-                  ―上達したい人のための英会話
+                  上達したい人のための英会話
                 </h3>
 
                 <h5 class="card-description text-left">
@@ -673,7 +672,8 @@
                     <li>ご予算に合わせてしかも低料金で無理なく計画的に英会話レッスンを受けられます。遠慮なくご相談ください。</li>
                     <li>無理な入会はさせません。学びたいという気持ちが一番大事です。説明を聞きに来られても無料体験レッスンを受けられても執拗な勧誘は一切致しません。</li>
                     <li>授業はネイティブ、授業以外英会話の質問に至るまですべては日本人スタッフが日本語で対応致します。</li>
-                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。 いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
+                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。
+                      いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
                     </li>
                   </ol>
                 </h5>
@@ -1085,8 +1085,7 @@
           </div>
         </div>
 
-        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank"
-          class="btn btn-danger btn-raised" style="width: 200px">
+        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank" class="btn btn-danger btn-raised" style="width: 200px">
           <i class="fa fa-play"></i> Matt's vid
         </a>
         <a href="#" class="btn btn-primary btn-raised" style="width: 200px">About</a>
@@ -1224,9 +1223,9 @@
                   <div class="col-md-6">
                     <div class="checkbox">
                       <label>
-												<input type="checkbox" name="optionsCheckboxes">
-												I'm not a robot
-											</label>
+                        <input type="checkbox" name="optionsCheckboxes">
+                        I'm not a robot
+                      </label>
                     </div>
                   </div>
                   <div class="col-md-6">
