Content updated, changes to menu names across all pages, and image updates

--- a/lesson-course.html
+++ b/lesson-course.html
@@ -9,14 +9,11 @@
 
 	<title>Sun Mihall</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
-	/>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-	/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-	/>
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -55,7 +52,7 @@
 						<ul class="dropdown-menu">
 							<li>
 								<a href="index.html">
-									Home
+									ホーム
 								</a>
 							</li>
 							<li>
@@ -104,13 +101,13 @@
 
 					<li>
 						<a href="lesson-course.html">
-							レッスンコース
+							レッスンスタイル
 						</a>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							目的別の英会話レッスン
+							レッスンコース
 							<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
@@ -203,7 +200,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<h2 class="title">A Place for Everyone to Learn and Discover New Skills</h1>
+					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
+					<h1 class="title">レッスンコース</h1>
 				</div>
 			</div>
 		</div>
@@ -227,10 +225,11 @@
 				<div class="features-2">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
-							<h2 class="title">Why our lessons are the best</h2>
-							<h5 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam vitae cupiditate asperiores, explicabo
+							<h4>神戸・三宮の英会話サンミハールランゲージサービス</h4>
+							<h2 class="title">サンミハールのレッスンで目標が達成できる理由</h2>
+							<!-- <h5 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam vitae cupiditate asperiores, explicabo
 								pariatur consequuntur omnis et ducimus, quam debitis, voluptate quibusdam obcaecati temporibus
-								vel perferendis! Expedita placeat accusantium, laboriosam.</h5>
+								vel perferendis! Expedita placeat accusantium, laboriosam.</h5> -->
 						</div>
 					</div>
 
@@ -241,10 +240,10 @@
 									<i class="material-icons">group_work</i>
 								</div>
 								<div class="description">
-									<h4 class="info-title">Native Speaking Teachers</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione vero consequatur architecto
-										inventore omnis expedita, eaque at ad recusandae iure ipsam dolores! Id ipsam iure aliquid
-										esse ratione odit nihil?</p>
+									<h4 class="info-title">米国・豪州のネイティブ講師</h4>
+									<p>神戸三宮の英会話サンミハールの講師は英語、日本語バイリンガルのネイティブ！分からないところも必要ならば、日本語でも細かく聞いて丁寧に教えてもらえます。オリジナルのサンミハールメソッドであなたに発話させてくれる、「話すトレーニング」のような授業で話している自分を実感できます。
+
+									</p>
 									<a href="#">More info</a>
 								</div>
 							</div>
@@ -257,10 +256,8 @@
 									<i class="material-icons">airplay</i>
 								</div>
 								<div class="description">
-									<h4 class="info-title">Online Lessons</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae alias rem ducimus modi laudantium,
-										repellendus eum ullam recusandae suscipit natus debitis, repudiandae consequuntur autem ut
-										quam eligendi, facilis labore doloremque?</p>
+									<h4 class="info-title">どんなことができるの？</h4>
+									<p>無料の宿題添削、授業録音、テキスト持込OKです。専門職として様々なトレーニングを受けているサンミハールの講師はどんなレッスンのご要望にも即対応できるので、受身でなく自分のやりたいことができます。例えば、翌日の会議でのプレゼンの練習、アメリカの医師国家試験USMLEの面接対策も当日予約の準備なしで対応できる優秀な講師陣です。</p>
 									<a href="#">More info</a>
 								</div>
 							</div>
@@ -272,10 +269,8 @@
 									<i class="material-icons">location_on</i>
 								</div>
 								<div class="description">
-									<h4 class="info-title">Outservice</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, repellat ipsum officia fuga quae
-										temporibus, neque optio illo et reiciendis velit. Deserunt animi perspiciatis earum harum officia
-										ipsa architecto natus!</p>
+									<h4 class="info-title">他のメリットは？</h4>
+									<p>低料金で上質の個人レッスンが1回からでも受講可能で、あなたのお金と時間を無駄にしません。もっといっぱい話して欲しいから、プライベートレッスンを受講すると回数に応じてフリートークのレッスンが無料で受講できます。また転勤になってもオンラインで授業が継続できます。</p>
 									<a href="#">More info</a>
 								</div>
 							</div>
@@ -316,6 +311,7 @@
 												<!-- <h3 class="card-title">プライベートレッスン<br>（マンツーマン）</h3> -->
 												<h3 class="card-title">プライベートレッスン<br>（マンツーマン)</h3>
 											</a>
+											<p class="card-description">マンツーマンの個人レッスンで内容は受講生のレベル、目的に合わせて手作りいたします。また少人数のフリーカンバセーションレッスン（フリートーク）が無料で付いてきます。 1レッスンは40分で曜日、時間帯、レッスン数は受講生のスケジュールに合わせて自由に選んでいただける完全自由予約制です。</p>
 
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -327,7 +323,6 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">マンツーマンの個人レッスンで内容は受講生のレベル、目的に合わせて手作りいたします。また少人数のフリーカンバセーションレッスン（フリートーク）が無料で付いてきます。 1レッスンは40分で曜日、時間帯、レッスン数は受講生のスケジュールに合わせて自由に選んでいただける完全自由予約制です。</p>
 											<p class="card-description">
 												<ul class="card-description text-left">
 													<li>授業を録音できます</li>
@@ -357,17 +352,7 @@
 											<a href="#">
 												<h3 class="card-title">セミプライベート<br>レッスン<br>（1：2）</h3>
 											</a>
-											<p class="card-description">
-												<ul class="card-description text-left">
-													<li>授業を録音できます</li>
-													<li>英作文他、ホームワークの添削無料</li>
-													<li>テキスト他教材の持ち込みOK！</li>
-													<li>間違いを丁寧に訂正してくれる家庭教師のような教師</li>
-													<li>授業外でもお友達同士で励ましあって勉強出来ます</li>
-													<li>毎回自己紹介をしなくていい◎</li>
-													<li>フリーカンバセーションが無料で付いてくる（月6回～）</li>
-												</ul>
-											</p>
+											<p class="card-description">お友達と2人のレッスンで、内容は受講生のレベル、目的に合わせて手作り致します。曜日、時間帯、レッスン数はお2人のスケジュールに合わせて自由に選んでいただける完全自由予約制です。スケジュールの調整はお2人で相談なさって下さい。お友達、同僚、ご夫婦などでご利用されています。</p>
 
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -379,7 +364,15 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">お友達と2人のレッスンで、内容は受講生のレベル、目的に合わせて手作り致します。1レッスンは40分で曜日、時間帯、レッスン数はお2人のスケジュールに合わせて自由に選んでいただける完全自由予約制です。スケジュールの調整はお2人で相談なさって下さい。お友達、同僚、ご夫婦などでご利用されています。知らない人と受けるレッスンでは会話もその場限りですが、お友達同士なら授業の後もそのまま英語モードで会話の練習をしたり、復習も一緒にできたり励ましあって楽しく英語の勉強ができます。</p>
+											<p class="card-description">
+												<ul class="card-description text-left">
+													<li>授業を録音できます</li>
+													<li>英作文他、ホームワークの添削無料</li>
+													<li>テキスト他教材の持ち込みOK！</li>
+													<li>間違いを丁寧に訂正してくれる家庭教師のような教師</li>
+													<li>授業外でもお友達同士で励ましあって勉強できます</li>
+												</ul>
+											</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -414,7 +407,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br>												毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
+											<p class="card-description">テキストは使わず、旬の話題を中心に自由に英会話を楽しんでいただくクラスです。何年も英語を勉強しているのに実際に外国人を目にすると話せない…と言う様な悩みを持たれたことがあるのではないでしょうか。サンミハールの講師と自由に英語で会話を楽しんで頂く中で、ご自身の英会話力を高めて頂こうというものです。<br> 毎日受講して頂ける自由予約制の受け放題コースと2か月毎のチケット制コースがあります。
 											</p>
 											<br>
 											<div class="footer text-center">
@@ -486,9 +479,7 @@
 
 									<div class="back back-background" style="background-image: url('assets/img/examples/card-blog6.jpg');">
 										<div class="card-content">
-											<p class="card-description">英語圏への転勤後でも継続率95%!<br> 遠方の方、通学が困難な方にはWEBレッスン（オンラインレッスン）が便利です。スカイプを使って、ご自宅にいながら、また職場からレッスンを受けていただけます。神戸三宮のスクールと同じクオリティの授業をオンラインで受けられます。オンライン英会話では時間の短いところが多いようですが、せっかく英語脳になったのに授業が終わってしまってはもったいない！
-												三宮スクールと同じ40分ネイティブの英会話レッスンです。
-												<br> 三宮のスクールでレッスンを受けていた方が英語圏への転勤後にレッスンを継続される割合はなんと95%! 神戸三宮でネイティブの教える質の高いWebレッスン、海外のスクールでは満足出来ない丁寧さがサンミハールにはあります。</p>
+											<p class="card-description">英語圏への転勤後でも継続率95%!<br> 遠方の方、通学が困難な方にはWEBレッスン（オンラインレッスン）が便利です。スカイプやLINEを使って神戸三宮のスクールと同じクオリティの授業をオンラインで受けられます。オンライン英会話でも三宮スクールと同じ40分ネイティブのレッスンです。 ただの外国人のオンライン英会話とは比較にならないまた海外のスクールでは満足できない質の高さを実感してみてください。</p>
 											<br>
 											<div class="footer text-center">
 												<button type="button" name="button" class="btn btn-info btn-fill btn-round btn-rotate">
@@ -720,7 +711,7 @@
 				<script>
 					document.write(new Date().getFullYear())
 				</script>, made with
-				<i class="fa fa-heart heart"></i> by KobeDesignLab
+				<i class="fa fa-heart heart"> by <a href="http://www.kobedesignlab.com">KobeDesignLab</a></i>
 			</div>
 		</div>
 	</footer>
