--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
                 <div class="col-md-5">
                   <div class="card-image">
                     <a href="#">
-                      <img class="img" src="assets/img/faces/kendall.jpg" />
+                      <img class="img" src="assets/img/faces/card-profile7-square.jpg" />
                     </a>
                   </div>
                 </div>
@@ -1507,7 +1507,7 @@
         <script>
           document.write(new Date().getFullYear())
         </script>, made with
-        <i class="fa fa-heart heart"></i> by KobeDesignLab
+        <i class="fa fa-heart heart"> by <a href="http://www.kobedesignlab.com">KobeDesignLab</a></i>
       </div>
     </div>
   </footer>
@@ -1515,7 +1515,7 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+<script src=" assets/js/jquery.min.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="assets/js/material.min.js"></script>
 
