--- a/pricing.html
+++ b/pricing.html
@@ -9,14 +9,11 @@
 
 	<title>Sun Mihall</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
-	/>
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
 	<!--     Fonts and icons     -->
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-	/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-	/>
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -55,7 +52,7 @@
 						<ul class="dropdown-menu">
 							<li>
 								<a href="index.html">
-									Home
+									ホーム
 								</a>
 							</li>
 							<li>
@@ -104,13 +101,13 @@
 
 					<li>
 						<a href="lesson-course.html">
-							レッスンコース
+							レッスンスタイル
 						</a>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							目的別の英会話レッスン
+							レッスンコース
 							<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
@@ -385,7 +382,7 @@
 								</div>
 							</div>
 
-							<div class="col-md-4">
+							<!-- <div class="col-md-4">
 								<div class="card card-pricing card-raised">
 									<div class="card-content">
 										<h6 class="category text-info">Group</h6>
@@ -400,7 +397,7 @@
 										</a>
 									</div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 
 					</div>
@@ -614,7 +611,7 @@
 				<script>
 					document.write(new Date().getFullYear())
 				</script>, made with
-				<i class="fa fa-heart heart"></i> by KobeDesignLab
+				<i class="fa fa-heart heart"> by <a href="http://www.kobedesignlab.com">KobeDesignLab</a></i>
 			</div>
 		</div>
 	</footer>
