Changed Header text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="ALL">
-  <meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
+  <meta name="keywords" content="英会話　神戸, 英会話　三宮, 英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
   <meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
   <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
 
@@ -261,6 +261,7 @@
         <div class="col-md-6">
           <h3 class="title">新しい素敵なホームページはもうすぐ！</h3>
           <h1 class="title">目標を達成できる<br>英会話スクール</h1>
+          <h3 class="title">新しい素敵なホームページはもうすぐ！</h3>
           <h3>今の勉強法やスクールで満足ですか？</h3>
           <br />
           <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
