changed pricing buttons on index page

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
               <h3 class="title">
                 あなたの次の目標達成のためにぴったり あった料金プランをご提案します。
               </h3>
-              <ul class="nav nav-pills" role="tablist">
+              <!-- <ul class="nav nav-pills" role="tablist">
                 <li class="active">
                   <a href="#personal" role="tab" data-toggle="tab">
                     プライベート/WEB
@@ -463,12 +463,29 @@
                     フリーカンバセーション
                   </a>
                 </li>
-              </ul>
+              </ul> -->
 
               <p class="text-gray">
                 月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>
                 個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
               </p>
+              <ul class="nav nav-pills" role="tablist">
+                <li class="active">
+                  <a href="#personal" role="tab" data-toggle="tab">
+                    プライベート/WEB
+                  </a>
+                </li>
+                <!-- <li>
+                  <a href="#commercial" role="tab" data-toggle="tab">
+                    セミプライベート
+                  </a>
+                </li> -->
+                <li>
+                  <a href="#commercial-2" role="tab" data-toggle="tab">
+                    フリーカンバセーション
+                  </a>
+                </li>
+              </ul>
               <a href="pricing.html" class="btn btn-primary margin-top-small">
                 レッスン・料金プランを詳しく見る
               </a>
