small changes to pricing, and about pages

--- a/about.html
+++ b/about.html
@@ -236,25 +236,15 @@
 					</div>
 					<div class="col-md-5">
 						<h3 class="title">President's Message</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-							ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-							esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-							in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-							ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-							esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
-							in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+						<p>Sun Mihall Language Service is the oldest foreign-owned English school in Kobe. Since 1981 we have strived to provide our students with the best lessons possible using our original Sun Mihall teaching method.</p>
 						<blockquote>
 							<p>
-								“Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, necessitatibus.”
+								“Our native English teachers and staff are very friendly, quite knowledgeable and qualified to help you improve your English communication skills.”
 							</p>
 						</blockquote>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, labore. Consectetur nulla beatae
-							excepturi quod ullam similique doloremque quisquam, voluptatibus quis nihil inventore perspiciatis,
-							reiciendis iusto enim, repellendus fugit magni.</p>
+						<p>We are also able to tailor lessons around your specific needs to make your professional and personal goals reality. Contact us for information on our competitive prices and schedule a free sample lesson to open golden doors to a brighter
+							future.
+							With thanks and best wishes,</p>
 					</div>
 				</div>
 
