--- a/lesson-course.html
+++ b/lesson-course.html
@@ -559,11 +559,11 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
-							<h4 class="text-center description">
+							<h4 class="text-left description">
 								お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
 								<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
 							</h4>
-							<h4 class="text-center description">
+							<h4 class="text-left description">
 								下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
 								<strong>（078-331-3035）</strong>にてご連絡ください。
 							</h4>
