Change font color and fix mobile nav

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="robots" content="ALL">
   <meta name="keywords" content="英会話　神戸, 英会話　三宮, 英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
   <meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
+  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
+  />
 
   <meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
   <meta property="og:type" content="school">
@@ -22,8 +23,10 @@
   <title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
   <!--     Fonts and icons     -->
-  <link rel=" stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+  <link rel=" stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+  />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+  />
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -65,7 +68,8 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+            width="auto">
         </a>
       </div>
 
@@ -233,19 +237,19 @@
           </li> -->
 
           <li>
-            <a href="pricing.html" target="" class="btn btn-white btn-simple">
+            <a href="pricing.html">
               料金と時間割
             </a>
           </li>
 
           <li>
-            <a href="about.html" target="" class="btn btn-white btn-simple">
+            <a href="about.html">
               About
             </a>
           </li>
 
           <li>
-            <a href="#contactus" target="" class="btn btn-white btn-simple">
+            <a href="#contactus">
               お問い合わせ
             </a>
           </li>
@@ -297,7 +301,7 @@
                 <i class="material-icons">chat</i>
               </div>
               <h4 class="info-title text-center">フリートークが無料でついてくる！</h4>
-              <p>
+              <p class="text-dark-gray">
                 神戸・三宮の英会話サンミハールではマンツーマンのプライベートレッスンを購入すると、もれなくフリーカンバセーションレッスン(フリートーク)が無料でついてきます！<br> プライベートレッスンはマンツーマン（個人レッスン）で初心者から上級者まで、またビジネス英語や試験対策まで受講者のご要望に合わせたレッスン内容で、目標達成までフォローしてもらえる英会話上達のためにはおすすめのレッスンです。
                 <br> ただ、個人レッスンだけでは、講師ではない外国人との容赦ないスピードの会話に入っていけるかどうかの確認が出来ません。そこで、サンミハールではこの個人レッスンにフリートークをプラス1年の猶予を持って無料（※）で提供しています。サンミハールは神戸三宮でフリートークをいち早く開催した英会話教室です。
                 <br><br> ※無料フリーカンバセーションの回数はマンツーマンのプライベートレッスンのチケット数によって異なります。
@@ -311,7 +315,7 @@
                 <i class="material-icons">verified_user</i>
               </div>
               <h4 class="info-title text-center">サンミハールは先生が最高！</h4>
-              <p>
+              <p class="text-dark-gray">
                 これは生徒さんのお言葉です。外国人とネイティブは違います。プライベート（マンツーマン）レッスンの講師はネイティブ（アメリカ人、オーストラリア人）であり、大学等で言語やビジネスを学んだ人材を採用し、採用後も生徒さんが話したことをきちんと細かく訂正してくれる家庭教師のような英会話講師の育成に力を注いでいます。英会話講師の質を保つため、個人個人のトレーニングはもちろんのこと、講師の抜き打ちレッスンチェックを行います。また、定期的に講師と受付スタッフミーティングを行い、今どの生徒さんが何を必要としていて、授業やカウンセリングで何をすべきかを話し合い反映させます。安いだけのカフェでの個人レッスンとは大きく質が異なります。
               </p>
             </div>
@@ -323,7 +327,7 @@
                 <i class="material-icons">alarm_on</i>
               </div>
               <h4 class="info-title text-center">ご予約の方法はいろいろ！</h4>
-              <p>
+              <p class="text-dark-gray">
                 レッスンのご予約は神戸三宮の教室で、お電話で、またメールやLINEでも出来ます。当日、急に時間が出来て英会話レッスンが受けたくなっても大丈夫。プライベートレッスンはマンツーマンの個人レッスンなので少人数制のように同じレベルの方の入っているクラスに時間を合わせなくてもいいのです。自由予約制で条件内での振替も出来ます。当日、営業職などなかなか予定が決められない方には、空き状況メールをお送りしています。また、フリーカンバセーション（フリートーク）は開催状況をWEBでチェック出来、当日飛び込み参加も可能です。
               </p>
             </div>
@@ -370,7 +374,7 @@
             <div class="col-md-8 col-md-offset-2 text-center">
               <h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
               <h2 class="title">キャンペーン！</h2>
-              <h5 class="description">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！お得に英会話のレッスンを続けられます。キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。</h5>
+              <h5 class="text-dark-gray">このページをご訪問下さった方に入会金割引などの特典があります。また、入会後も季節ごとに様々なキャンペーンを実施中！お得に英会話のレッスンを続けられます。キャンペーンは神戸三宮の教室内でのレッスン、WEBレッスン共に適用されます。</h5>
               <div class="section-space"></div>
             </div>
           </div>
@@ -398,7 +402,7 @@
                 </div>
                 <div class="description">
                   <h4 class="info-title">11月新入会者限定！入会金割引キャンペーン</h4>
-                  <p class="description">
+                  <p class="text-dark-gray">
                     11月に新たに入会される方のみの特典です。ホームページ見ました！で入会金が通常10,800円(税込)のところ50％OFF！<br> （但し、初回ご来校当日入会または体験レッスン後即日入会の場合に適用。）
                   </p>
                 </div>
@@ -410,7 +414,7 @@
                 </div>
                 <div class="description">
                   <h4 class="info-title">お友達ご紹介キャンペーン</h4>
-                  <p class="description">
+                  <p class="text-dark-gray">
                     サンミハールの会員の方からのご紹介で神戸三宮のサンミハールに入会されると以下の特典が受けられます。<br> お友達は入会金30％OFF！
                     <br> 貴方には\3,000分英会話クーポンをプレゼント！
                   </p>
@@ -465,9 +469,8 @@
                 </li>
               </ul> -->
 
-              <p class="text-gray">
-                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>
-                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
+              <p class="text-dark-gray">
+                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
               </p>
               <a href="pricing.html" class="btn btn-primary margin-top-small">
                 レッスン・料金プランを詳しく見る
@@ -687,22 +690,21 @@
                   上達したい人のための英会話
                 </h3>
 
-                <h5 class="card-description text-left">
+                <h5 class="text-dark-gray text-left">
                   海外旅行で言いたい事が英語で言えたら。仕事で海外からの取引先の電話を英語でさらっとこなせたら。 転職にTOEIC730点は欲しいな。英会話を始める理由はいろいろ。初めて英会話を始めるのには勇気がいります。でもほんのちょっとの勇気であなたの舞台が世界に広がります。そのお手伝いをするための英会話教室が神戸・三宮の英会話サンミハールです。
                 </h5>
 
-                <h5 class="card-description text-left">
+                <h5 class="text-dark-gray text-left">
                   神戸・三宮の英会話サンミハールは英会話上達に最も効果的なマンツーマンのレッスンを神戸でいち早く取り入れたアメリカ人が経営する地元の英会話教室です。
                 </h5>
 
-                <h5 class="card-description text-left">
+                <h5 class="text-dark-gray text-left">
                   気軽に英会話の扉を開くために
                   <ol>
                     <li>ご予算に合わせてしかも低料金で無理なく計画的に英会話レッスンを受けられます。遠慮なくご相談ください。</li>
                     <li>無理な入会はさせません。学びたいという気持ちが一番大事です。説明を聞きに来られても無料体験レッスンを受けられても執拗な勧誘は一切致しません。</li>
                     <li>授業はネイティブ、授業以外英会話の質問に至るまですべては日本人スタッフが日本語で対応致します。</li>
-                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。
-                      いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
+                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。 いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
                     </li>
                   </ol>
                 </h5>
@@ -1000,7 +1002,7 @@
                     <h4 class="card-title">Matt - Australian</h4>
                     <h6 class="category text-muted">Head Teacher</h6>
 
-                    <p class="card-description">
+                    <p class="text-dark-gray">
                       G'day! I come from the land down under, Australia. I enjoy basketball and relaxing in the sun. I have
                       travelled around the world and back many times and love to share my experiences
                       and would love to hear yours, too. I love Japan, the people and the culture. So
@@ -1040,7 +1042,7 @@
                     <h4 class="card-title">Ryan - American</h4>
                     <h6 class="category text-muted">Teacher</h6>
 
-                    <p class="card-description">
+                    <p class="text-dark-gray">
                       Hi, I'm from the U.S. I came to Japan in 2008. I like movies, golf and gardening. I also love exploring
                       the countryside of Japan. I love meeting new people and look forward to seeing
                       you soon.
@@ -1081,7 +1083,7 @@
                     <h4 class="card-title">Akemi</h4>
                     <h6 class="category text-muted">School Manager</h6>
 
-                    <p class="card-description">
+                    <p class="text-dark-gray">
                       1997年より現職。初めての海外は何と26歳の欧州出張。にわか英会話で商談成立をきっかけにまじめに英会話教室に通い日常会話が出来る様に。実は理系女子で解析好きの私が皆さんの英会話上達への細かな問題解析をして目標達成のお手伝いをします。
                     </p>
                   </div>
@@ -1103,7 +1105,8 @@
                     <h4 class="card-title">Shoko</h4>
                     <h6 class="category text-muted">Receptionist</h6>
 
-                    <p class="card-description">
+                    <!-- <p class="card-description"> -->
+                    <p class="text-dark-gray">
                       2013年からサンミハールにて受付業務、カウンセリング。英会話ほんとに楽しいです。合間にレッスンも受講し英検準1級に合格。そして副業は女子大生。いくつになっても学びたい皆さんの気持ちがわかります。試験対策のコツは私に聞いて下さいね。
                     </p>
                   </div>
@@ -1114,7 +1117,8 @@
           </div>
         </div>
 
-        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank" class="btn btn-danger btn-raised" style="width: 200px">
+        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank"
+          class="btn btn-danger btn-raised" style="width: 200px">
           <i class="fa fa-play">　</i>Matt先生　</a>
         <a href="#" class="btn btn-primary btn-raised" style="width: 200px">About</a>
 
@@ -1535,7 +1539,9 @@
         <script>
           document.write(new Date().getFullYear())
         </script>, made with
-        <i class="fa fa-heart heart"> by <a href="http://www.kobedesignlab.com">KobeDesignLab</a></i>
+        <i class="fa fa-heart heart"> by
+          <a href="http://www.kobedesignlab.com">KobeDesignLab</a>
+        </i>
       </div>
     </div>
   </footer>
