--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
+	<meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
+	/>
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -20,12 +21,15 @@
 
 	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'
+	/>
 
 	<!--     Fonts and icons     -->
 	<link rel="
-	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+	  stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+	/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+	/>
 
 	<!-- CSS Files -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -48,7 +52,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
-					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+					<img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+					  width="auto">
 				</a>
 			</div>
 
@@ -187,19 +192,19 @@
 					</li>
 
 					<li>
-						<a href="pricing.html" target="" class="btn btn-white btn-simple">
+						<a href="pricing.html">
 							料金と時間割
 						</a>
 					</li>
 
 					<li>
-						<a href="about.html" target="" class="btn btn-white btn-simple">
+						<a href="about.html">
 							About
 						</a>
 					</li>
 
 					<li>
-						<a href="index.html#contactus" target="" class="btn btn-white btn-simple">
+						<a href="index.html#contactus">
 							お問い合わせ
 						</a>
 					</li>
@@ -208,7 +213,8 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg2-2.jpg');" alt="神戸3 Teachers英会話">
+	<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg2-2.jpg');"
+	  alt="神戸3 Teachers英会話">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -236,15 +242,18 @@
 					</div>
 					<div class="col-md-5">
 						<h3 class="title">President's Message</h3>
-						<p>Sun Mihall Language Service is the oldest foreign-owned English school in Kobe. Since 1981 we have strived to provide our students with the best lessons possible using our original Sun Mihall teaching method.</p>
+						<p>Sun Mihall Language Service is the oldest foreign-owned English school in Kobe. Since 1981 we have
+							strived to provide our students with the best lessons possible using our original Sun Mihall teaching
+							method.</p>
 						<blockquote>
 							<p>
-								“Our native English teachers and staff are very friendly, quite knowledgeable and qualified to help you improve your English communication skills.”
+								“Our native English teachers and staff are very friendly, quite knowledgeable and qualified to help you
+								improve your English communication skills.”
 							</p>
 						</blockquote>
-						<p>We are also able to tailor lessons around your specific needs to make your professional and personal goals reality. Contact us for information on our competitive prices and schedule a free sample lesson to open golden doors to a brighter
-							future.
-							With thanks and best wishes,</p>
+						<p>We are also able to tailor lessons around your specific needs to make your professional and personal
+							goals reality. Contact us for information on our competitive prices and schedule a free sample
+							lesson to open golden doors to a brighter future. With thanks and best wishes,</p>
 					</div>
 				</div>
 
@@ -407,7 +416,9 @@
 				<script>
 					document.write(new Date().getFullYear())
 				</script>, made with
-				<i class="fa fa-heart heart"> by <a href="http://www.kobedesignlab.com">KobeDesignLab</a></i>
+				<i class="fa fa-heart heart"> by
+					<a href="http://www.kobedesignlab.com">KobeDesignLab</a>
+				</i>
 			</div>
 		</div>
 	</footer>
